fixed broken css

--- a/css.css
+++ b/css.css
@@ -1,6 +1,8 @@
-html {
-  font-family: sans-serif;
-  width: 90%
+
+
+body {
+  /* font-family: sans-serif; */
+  width: 90%;
   background-color: black;
   color: #fff;
   margin: 0 auto;
